grammar
Chordpro grammar:
start -> (line, '\n', start)
start -> (epsilon)
line -> (line, '#', anythingExceptNewline)
line -> (epsilon)
line -> (directive)
directive -> ('{', directiveContent, '}')
directiveContent -> ( directiveName, ':', ' ', arguments )
directiveContent -> ( directiveName, ':', arguments )
directiveContent -> ( directiveName, ' ', arguments )
directive -> (conditionalDirective)
conditionalDirective -> ( directiveName, '-', selector, ':', ' ', arguments )
conditionalDirective -> ( directiveName, '-', selector, ':', arguments )
conditionalDirective -> ( directiveName, '-', selector, ' ', arguments )
selector -> (selectorName)
selector -> (selectorName, '!')
arguments -> (text)
text -> (word, text)
text -> (word, text)
text -> (space, text)
text -> ('*', text)
text -> ('-', text)
text -> (epsilon)
line -> (textWithChords)
textWithChords -> (text, textWithChords)
textWithChords -> (chord, textWithChords)
chord -> ('[', chordContent ,']')
chordContent -> ('*', word)
chordContent -> (chordNames)
textWithChords -> (epsilon)
